--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <style>
         .conteudo h2::before {
-            content: "🎁";
+            content: "✉️";
         }
     </style>
 </head>
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="limitador">
-            <h1><a href="index.html">Hotifruti</a></h1>
+            <h1><a href="index.html">Multi Frutti</a></h1>
             <nav>
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
