--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hotifruti</title>
+    <title>Home Multi Frutti</title>
     <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
     <header>
         <div class="limitador">
-            <h1><a href="index.html">Hotifruti</a></h1>
+            <h1><a href="index.html">Multi Frutti</a></h1>
             <nav>
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
@@ -25,26 +25,32 @@
     </header>
 
     <main>
-        <article class="destaque">
+
+        <!-- <article class="destaque">
             <h2>HTML & CSS & JS</h2>
             <p>Aplicando tecnologias web</p>
         </article>
+        -->
 
-        <article class="front-end limitador">
-            <h2>Desenvolvimento Front-End</h2>
-            <p>O <b>desenvolvedor Front-End</b> é o profissional que cuida da parte do código que é intepretado
-                diretamente pelo <i>navegador.</i></p>
+        <article class="limitador conteudo">
+            <h2>Bem-vindo à Multi Frutti</h2>
 
-            <p>No desenvolvimento por camadas, <abbr title="HyperText Markup Language">HTML</abbr> é o responsável
-                pala marcação de conteúdo, o <abbr title="Cascading Style Sheets">CSS</abbr> cuida do estilo visual
-                e o JavaScript é o responsável pelo comportamento.</p>
+            <p>
+            A Multi Frutti é uma distribuidora de hortifrutigranjeiros dedicada a fornecer produtos frescos e de alta qualidade para bares e restaurantes. Nossa missão é conectar fornecedores de confiança com estabelecimentos que valorizam a excelência em suas cozinhas.<br><br>
+            Com uma vasta rede de parceiros, garantimos a entrega de frutas, verduras e legumes rigorosamente selecionados, diretamente do campo para o seu negócio. Seja você um chef em busca dos melhores ingredientes ou um produtor interessado em expandir seu mercado, a Multi Frutti é o seu aliado ideal.<br>      <br>          
+            Trabalhamos com transparência, comprometimento e um profundo respeito pela origem e qualidade dos produtos que distribuímos. Estamos prontos para colaborar e contribuir com o sucesso do seu empreendimento.<br><br>
+            Entre em contato conosco e descubra como podemos ajudar a elevar a qualidade dos seus pratos e a satisfação dos seus clientes.</p> <br><br>
+            </p>
+
+        <!--
             <figure>
-                <img src="imagens/tecnologias.png" alt="Longotipos das linguagens HTML,CSS, JS">
+                 <img src="imagens/tecnologias.png" alt="Longotipos das linguagens HTML,CSS, JS"> 
             </figure>
+        -->
         </article>
 
         <article class="historia">
-            <h2>História da internet</h2>
+            <h2>Nossa Jornada</h2>
             <iframe width="" height="315" src="https://www.youtube.com/embed/jlkvzcG1UMk?si=aZJk1HKtaGz0jShj"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -55,8 +61,8 @@
             <h2>Localização</h2>
             <address>
                 Rua Tito 54 Vila Romana Lapa-São Paulo/S.P <br>
-                Telefone: <a href="tel:11238885500">(11) 2888-5500</a>
-                E-mail: <a href="mailto:lapatito@sp.senac.br"> lapatito@sp.senac.br.</a>
+                WhatsApp: <a href="https://wa.me/551177947334">(11) 7794-7334</a>
+                E-mail: <a href="mailto:multfruti.1010@gmail.com"> multfruti.1010@gmail.com</a>
             </address>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1227059827465!2d-46.694390326235755!3d-23.528088660367626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef875057678ff%3A0xec699445ec10601a!2sR.%20Tito%2C%2054%20-%20Vila%20Romana%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2005051-000!5e0!3m2!1spt-BR!2sbr!4v1723553026421!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </article>
@@ -64,7 +70,7 @@
     </main>
 
     <footer>
-        <p>Hotfruti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
+        <p>Multi Frutti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
             -<time>2024</time></p>
     </footer>
 
