--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="limitador">
-            <h1><a href="index.html">Hotifruti</a></h1>
+            <h1><a href="index.html">Multi Frutti</a></h1>
             <nav>
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
@@ -26,7 +26,7 @@
 
     <main>
         <article class="limitador conteudo">
-            <h2>Produtos</h2>
+            <h2>🛒 Produtos</h2>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam esse ab, molestias iste libero fugiat ipsum repellat, cum sit labore distinctio consectetur temporibus rem, eligendi dolor adipisci eveniet maiores aspernatur?</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus deleniti sint velit reiciendis enim quibusdam mollitia sit aliquid natus porro obcaecati, quia, id ullam delectus veniam, dolor consequuntur voluptas.</p>
             <table >
