--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Catálogo</a></li>
+                    <li><a href="servicos.html">Notícias</a></li>
                     <li><a href="contato.html">Contatos</a></li>
                 </ul>
             </nav>
@@ -52,7 +52,7 @@
 
         <article class="historia">
             <h2>Nossa Jornada</h2>
-            <iframe width="" height="315" src="https://www.youtube.com/embed/jlkvzcG1UMk?si=aZJk1HKtaGz0jShj"
+            <iframe width="" height="315" src="https://www.youtube.com/embed/uSxQz0Tsv7s?si=-1zRWP7OAtZ7w59W"     
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
@@ -71,8 +71,10 @@
     </main>
 
     <footer>
-        <p>Multi Frutti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
-            -<time>2024</time></p>
+        <p>
+            Multi Frutti é um site fictício desenvolvido para fins educacionais &copy;. <b>Senac Tito</b> - <time>2024</time>.
+            Para mais informações sobre como protegemos seus dados, consulte nossa <a href="#">Política de Privacidade</a>.
+        </p>
     </footer>
 
     <script src="js/menu.js"></script>
