--- a/produtos.html
+++ b/produtos.html
@@ -16,8 +16,8 @@
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Catálogo</a></li>
+                    <li><a href="servicos.html">Notícias</a></li>
                     <li><a href="contato.html">Contatos</a></li>
                 </ul>
             </nav>
@@ -26,11 +26,14 @@
 
     <main>
         <article class="limitador conteudo">
-            <h2>🛒 Produtos</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam esse ab, molestias iste libero fugiat ipsum repellat, cum sit labore distinctio consectetur temporibus rem, eligendi dolor adipisci eveniet maiores aspernatur?</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus deleniti sint velit reiciendis enim quibusdam mollitia sit aliquid natus porro obcaecati, quia, id ullam delectus veniam, dolor consequuntur voluptas.</p>
+            <h2>🛒 Catálogo</h2>
+            <p>Confira o catálogo da Multi Frutti para explorar nossa seleção de frutas, verduras e legumes frescos. Oferecemos produtos de alta qualidade e serviços personalizados para atender às suas necessidades.</p>
+            <p>Navegue pelas opções disponíveis e, se precisar de ajuda, nossa equipe está pronta para assisti-lo.</p>
+            <p>Descubra como nossos produtos podem elevar a qualidade dos seus pratos!</p>
+            <br>
             <table >
                 <caption>Nossos produtos</caption>
+                
                 <tr>
                     <th>Produto</th>
                     <th>Prazo de entrega</th>
@@ -57,19 +60,15 @@
                     <td>9.500,00</td>
                 </tr>
             </table>
-
-
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt optio dolore repellendus doloribus libero error eum iusto? Voluptates magni labore ducimus ea impedit nobis rem molestiae ipsa esse. Necessitatibus, ipsum!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dignissimos quam neque, aperiam aliquid tenetur aliquam recusandae explicabo modi, facilis repellendus excepturi veritatis iste. Accusantium ea quisquam facere ipsum eius?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero minus consequuntur voluptatem consequatur, similique, dicta, eveniet omnis enim sequi quidem rem illum sunt iusto sint natus! Rem reprehenderit voluptatibus dignissimos?</p>
         </article>
     </main>
 
 
     <footer>
-        <p>Hotifruti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
-            -<time>2024</time></p>
+        <p>
+            Multi Frutti é um site fictício desenvolvido para fins educacionais &copy;. <b>Senac Tito</b> - <time>2024</time>.
+            Para mais informações sobre como protegemos seus dados, consulte nossa <a href="#">Política de Privacidade</a>.
+        </p>
     </footer>
     <script src="js/menu.js"></script>
 </body>
