--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <style>
         .conteudo h2::before {
-            content: "✉️";
+            content: "📩";
         }
     </style>
 </head>
@@ -21,8 +21,8 @@
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Catálogo</a></li>
+                    <li><a href="servicos.html">Notícias</a></li>
                     <li><a href="contato.html">Contatos</a></li>
                 </ul>
             </nav>
@@ -32,12 +32,11 @@
     <main>
         <article class="limitador conteudo">
             <h2>Contato</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam esse ab, molestias iste libero fugiat ipsum
-                repellat, cum sit labore distinctio consectetur temporibus rem, eligendi dolor adipisci eveniet maiores
-                aspernatur?</p>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, sint ex dolorem cum perspiciatis
-                architecto eos alias ipsum asperiores ducimus, quas praesentium ratione laudantium saepe voluptates
-                quos? Molestiae, aliquam nesciunt.</p>
+            <p>A Multi Frutti está à disposição para ajudar com suas necessidades de hortifrutigranjeiros. Oferecemos frutas, verduras e legumes frescos e de alta qualidade para bares e restaurantes.</p>
+            <p>Preencha o formulário abaixo ou use as informações de contato para falar conosco. Para dúvidas comuns, visite nossa <a href="#">página de FAQ</a>.</p>
+            <p>Estamos prontos para colaborar e contribuir para o sucesso do seu negócio!</p>
+            </article>
+        </br>
             <form action="https://formspree.io/f/mgejdnyw" method="post" autocomplete="off">
                 <div>
                     <label for="nome">Nome:</label>
@@ -50,7 +49,7 @@
                 </div>
 
                 <div>
-                    <label for="nascimento">Data de Nascimento:</label>
+                    <label for="nascimento">CPF/CNPJ:</label>
                     <input type="date" name="nascimento" id="nascimento" required>
                 </div>
                 <div>
@@ -107,8 +106,10 @@
 
 
     <footer>
-        <p>Hotifruti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
-            -<time>2024</time></p>
+        <p>
+            Multi Frutti é um site fictício desenvolvido para fins educacionais &copy;. <b>Senac Tito</b> - <time>2024</time>.
+            Para mais informações sobre como protegemos seus dados, consulte nossa <a href="#">Política de Privacidade</a>.
+        </p>
     </footer>
     <!-- Importação da biblioteca JQuery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
