--- a/servicos.html
+++ b/servicos.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/estilo.css">
     <style>
         .conteudo h2::before {
-            content: "🧺";
+            content: "📰";
         }
     </style>
 </head>
@@ -23,8 +23,8 @@
                 <h2><a href="">Menu &equiv;</a></h2>
                 <ul class="menu ">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="produtos.html">Produtos</a></li>
-                    <li><a href="servicos.html">Serviços</a></li>
+                    <li><a href="produtos.html">Catálogo</a></li>
+                    <li><a href="servicos.html">Notícias</a></li>
                     <li><a href="contato.html">Contatos</a></li>
                 </ul>
             </nav>
@@ -33,41 +33,34 @@
 
     <main>
         <article class="limitador conteudo">
-            <h2>Serviços</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nam esse ab, molestias iste libero fugiat ipsum
-                repellat, cum sit labore distinctio consectetur temporibus rem, eligendi dolor adipisci eveniet maiores
-                aspernatur?</p>
+            <h2>Notícias</h2>
+            <p>Fique por dentro das últimas novidades da Multi Frutti! Nesta seção, compartilhamos atualizações sobre novos produtos, eventos e tendências do setor de hortifrutigranjeiros.</p>
+            <p>Acompanhe nossas novidades para estar sempre atualizado e aproveite ao máximo o que oferecemos para o seu negócio. Para mais informações, entre em contato conosco.</p>
+            <p>Obrigado por acompanhar!</p>
             <figure class="galeria">
 
-                <a data-title="Desenvolvimento de sites" data-lightbox="fotos" href="imagens/desenvolvimento-web.jpg">
-                    <img src="imagens/desenvolvimento-web-mini.jpg" alt=""></a>
-                <a data-title="Desing gráfico oimpactante" data-lightbox="fotos" href="imagens/design-grafico.jpg"><img src="imagens/design-grafico-mini.jpg"
-                        alt=""></a>
-                <a data-title="Venda e convensa" data-lightbox="fotos" href="imagens/marketing-digital.jpg"><img
-                        src="imagens/marketing-digital-mini.jpg" alt=""></a>
-                <a data-title="Prepara-se para o mercado" data-lightbox="fotos" href="imagens/consultoria-treinamento.jpg"><img
-                        src="imagens/consultoria-treinamento-mini.jpg" alt=""></a>
+                <a data-title="Desenvolvimento de sites" data-lightbox="fotos" href="imagens/01.jpg">
+                    <img src="imagens/01.jpg" alt=""></a>
+
+                <a data-title="Desing gráfico oimpactante" data-lightbox="fotos" href="imagens/02.jfif"><img src="imagens/02.jfif" alt=""> </a>
+
+                <a data-title="Venda e convensa" data-lightbox="fotos" href="imagens/03.jfif"><img
+                        src="imagens/03.jfif" alt=""></a>
+
+                <a data-title="Prepara-se para o mercado" data-lightbox="fotos" href="imagens/04.jpg"><img
+                        src="imagens/04.jpg" alt=""></a>
 
             </figure>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Distinctio possimus deleniti sint velit
-                reiciendis enim quibusdam mollitia sit aliquid natus porro obcaecati, quia, id ullam delectus veniam,
-                dolor consequuntur voluptas.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt optio dolore repellendus doloribus
-                libero error eum iusto? Voluptates magni labore ducimus ea impedit nobis rem molestiae ipsa esse.
-                Necessitatibus, ipsum!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores dignissimos quam neque, aperiam
-                aliquid tenetur aliquam recusandae explicabo modi, facilis repellendus excepturi veritatis iste.
-                Accusantium ea quisquam facere ipsum eius?</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Libero minus consequuntur voluptatem
-                consequatur, similique, dicta, eveniet omnis enim sequi quidem rem illum sunt iusto sint natus! Rem
-                reprehenderit voluptatibus dignissimos?</p>
+            <p>A Multi Frutti continua a se esforçar para fornecer o melhor em produtos frescos e serviços de alta qualidade. Estamos empolgados com essas novidades e com o impacto positivo que elas terão para você e para o seu negócio. Fique atento às nossas atualizações e não hesite em nos contatar para mais informações sobre como podemos ajudar a aprimorar o seu sucesso!</p>
         </article>
     </main>
 
 
     <footer>
-        <p>Hotfruti é um site fictício desenvolvido para fins educacionais &copy; <b>Senac Tito</b>
-            -<time>2024</time></p>
+        <p>
+            Multi Frutti é um site fictício desenvolvido para fins educacionais &copy;. <b>Senac Tito</b> - <time>2024</time>.
+            Para mais informações sobre como protegemos seus dados, consulte nossa <a href="#">Política de Privacidade</a>.
+        </p>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="lightbox/js/lightbox.min.js"></script>
