--- a/contato.html
+++ b/contato.html
@@ -35,7 +35,7 @@
             <p>A Multi Frutti está à disposição para ajudar com suas necessidades de hortifrutigranjeiros. Oferecemos frutas, verduras e legumes frescos e de alta qualidade para bares e restaurantes.</p>
             <p>Preencha o formulário abaixo ou use as informações de contato para falar conosco. Para dúvidas comuns, visite nossa <a href="#">página de FAQ</a>.</p>
             <p>Estamos prontos para colaborar e contribuir para o sucesso do seu negócio!</p>
-            </article>
+        
         </br>
             <form action="https://formspree.io/f/mgejdnyw" method="post" autocomplete="off">
                 <div>
@@ -86,6 +86,7 @@
                     <!-- Deixe um option vazio de proposito -->
                     <select name="assunto" id="assunto" required>
                         <option value=""></option>
+                        <option>Orçamento</option>
                         <option>Dúvidas</option>
                         <option>Elogios</option>
                         <option>Reclamação</option>
